[Feat] 고정키 추가, CategoryEditPage UI 수정 (25.05.31)

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,6 +6,7 @@
   "background": {
     "service_worker": "background.bundle.js"
   },
+  "key": "miipddlbjbggckgcalofglocfdlndmhn",
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
