--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
 {
   "presets": [
-    // "@babel/preset-env"
-    "@babel/preset-react"
-    // "react-app"
+    "@babel/preset-env",
+    ["@babel/preset-react", {"runtime": "automatic"}]
   ],
   "plugins": [
     // "@babel/plugin-proposal-class-properties",
